--- a/Frontend/dcfrontend/package.json
+++ b/Frontend/dcfrontend/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "both": "concurrently \"npm run start\" \"cd ../../Backend && nodemon index.js\""
   },
   "eslintConfig": {
     "extends": [
