--- a/Sequalize-Backend/package.json
+++ b/Sequalize-Backend/package.json
@@ -20,7 +20,7 @@
   "author": "Yujen Maharjan",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
@@ -31,7 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0-alpha.1",
+    "sequelize": "^6.37.3",
     "sequelize-cli": "^6.3.0",
     "uuid": "^8.3.2"
   },
