Login and Signup route added

--- a/Sequalize-Backend/package.json
+++ b/Sequalize-Backend/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^10.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
